[gd_scene load_steps=6 format=2]

[ext_resource path="res://Code/Menu.gd" type="Script" id=1]
[ext_resource path="res://Textures/background.png" type="Texture" id=2]
[ext_resource path="res://Poppins-Black.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.33333, 1.33333 )
texture = ExtResource( 2 )
centered = false

[node name="Button" type="Button" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 256.0
margin_bottom = 85.0
text = "DEMO LEVEL 1"

[node name="Button2" type="Button" parent="."]
margin_left = 64.0
margin_top = 96.0
margin_right = 256.0
margin_bottom = 116.0
disabled = true
text = "DEMO LEVEL 2"

[node name="Button3" type="Button" parent="."]
margin_left = 64.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 148.0
disabled = true
text = "DEMO LEVEL 3"

[node name="Button4" type="Button" parent="."]
margin_left = 64.0
margin_top = 160.0
margin_right = 256.0
margin_bottom = 180.0
disabled = true
text = "DEMO LEVEL 4"

[node name="Button5" type="Button" parent="."]
margin_left = 64.0
margin_top = 192.0
margin_right = 256.0
margin_bottom = 212.0
disabled = true
text = "DEMO LEVEL 5"

[node name="Panel" type="Panel" parent="."]
margin_left = 288.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 224.0

[node name="Label" type="Label" parent="."]
margin_left = 312.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 285.0
text = "DEMO INSTRUCTIONS

Bouncers on side of screen contain values which will change the value of the ball.
The balls must enter the collection zone with the corresponding value.
Not all bouncers need to be used.
Game can be zoomed using bottom bar to allow for more space."
autowrap = true

[node name="Label2" type="Label" parent="."]
margin_left = 8.0
margin_top = 688.0
margin_right = 200.0
margin_bottom = 712.0
text = "Made in Godot 3.5.1"
valign = 1
autowrap = true

[node name="Button6" type="Button" parent="."]
margin_left = 336.0
margin_top = 328.0
margin_right = 816.0
margin_bottom = 440.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
