extends Control


func _on_Button_pressed():
	get_tree().change_scene("res://Scenes/Levels/Base.tscn")

func _on_Button2_pressed():
	get_tree().change_scene("res://Scenes/Levels/2.tscn")


func _on_Button3_pressed():
	get_tree().change_scene("res://Scenes/Levels/3.tscn")

func _on_Button4_pressed():
	get_tree().change_scene("res://Scenes/Levels/4.tscn")

func _on_Button5_pressed():
	get_tree().change_scene("res://Scenes/Levels/5.tscn")
